Fix sponsor image sizing on mobile view

--- a/responsive.css
+++ b/responsive.css
@@ -17,6 +17,15 @@
         line-height: 30px;
         margin-top: 10px;
     }
+
+    .container {
+        border-radius: 5px;
+        padding: 20px;
+        width: 70%;
+        max-width: 95%;
+        text-align: left;
+        background-color: #d8eed875;
+      }
 }
 
 @media screen and (max-width: 685px){
@@ -53,6 +62,18 @@
     }
     .project:hover{
         box-shadow: none;
+    }
+
+    .sponsorSection img{
+        box-sizing: border-box;
+        height: 80px;
+        align-self: center;
+        justify-self: center;
+        justify-content: center;
+        align-content: center;
+        margin-right: 20px;
+        margin-left: 20px;
+        padding: 5px;
     }
 
     .container {
