--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ footer{
     flex-direction: row;
     display: flex;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 .project{
     width: 600px;
@@ -358,9 +359,8 @@ input[type=text], select, textarea {
   .container {
     border-radius: 5px;
     padding: 20px;
-    min-width: 500px;
     width: 40%;
-    max-width: 95vw;
+    max-width: 95%;
     text-align: left;
     background-color: #d8eed875;
   }
